vlib/v/checker/tests/generic_array_init_err.vv
fn decode[T]() {
	_ := T{''}
	_ := T{0}
	_ := T{u8(1)}
}

fn main() {
	decode[[]u8]()
}
